# app

./: .env.test  .gitignore  .tool-versions  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/: README.md
.github/workflows/: ci-cd.yml
.run/: backend.run.xml  db.run.xml  pytest.run.xml  tests.run.xml
backend/: .dockerignore  .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/src/: main.py
backend/src/api/: main.py
backend/src/data/: main.py
backend/test/: test_config.py
backend/test/api/: test_health_check.py
backend/test/data/: test_get_db.py
docs/: README.md  ci-cd.md
infrastructure/: .gitignore  README.md  main.tf  outputs.tf  setup.sh  variables.tf
infrastructure/modules/cloud/: cloud_run.tf  variables.tf
infrastructure/modules/gcp/: cloud_run.tf  cloud_sql.tf  iam.tf  outputs.tf  secret_manager.tf  variables.tf  vpc.tf
src/: config.py
src/api/: main.py
src/data/: main.py  models.py
src/data/alembic/: env.py
src/data/alembic/versions/: 2025_03_15_1049-f5301436a15e_initial.py
test/: conftest.py
test/unit/api/: test_health_check.py
